# opengl-sandbox

./: README.md
animated-cube/: a.out  main.cpp  shader.cpp
animated-cube/include/: shader.h
common/: controls.cpp
cube-with-mvp/: a.out  bmploader.cpp  camera.cpp  controls.cpp  main.cpp
cube-with-mvp/include/: bmploader.h  camera.h  controls.h
cube-with-mvp/shaders/: basicshader.frag  basicshader.vert
interleaved-data/: a.out  main.cpp  programlinker.cpp  sprite.cpp
interleaved-data/include/: programlinker.h
interleaved-data/shaders/: colorshading.frag
iomanager/: Credits.txt  imageloader.cpp  ioutils.cpp  main.cpp  picopng.cpp  programlinker.cpp  shader.cpp  sprite.cpp
iomanager/include/: gltexture.h  imageloader.h  ioutils.h  programlinker.h  shader.h  sprite.h  vertex.h  window.h
model-view-projection/: a.out  main.cpp  programlinker.cpp
moving-triangle/: CMakeLists.txt  main.cpp  shader.cpp
moving-triangle/shaders/: shader.vert
shader-intro/: main.cpp  programlinker.cpp  shader.cpp
simple-triangle-and-shader-loader/: a.out  blah.txt  main.cpp  programlinker.cpp  sdlwrapper.cpp  shader.cpp  shaderloader.cpp
texture-caching/: a.out  ioutils.cpp  main.cpp  resourcemanager.cpp  sprite.cpp  texturecache.cpp  window.cpp
textured-2d-triangle/: CMakeLists.txt  a.out  main.cpp  texture.cpp  window.cpp
textured-2d-triangle/include/: texture.h  window.h
textured-2d-triangle/shaders/: fragment.glsl  vertex.glsl
uniform-variables/: a.out  programlinker.cpp  shader.cpp
vbo-sprite-and-ndc/: a.out  main.cpp  sprite.cpp
(+20 files in other folders)
